--- a/numpy-random.ipynb
+++ b/numpy-random.ipynb
@@ -4,17 +4,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# The numpy.random Package\n",
+    "# The numPy.random Library\n",
     "---------------------------------------------\n",
     "\n",
-    "## Here follows an investigation into the numpy.random package\n",
+    "## Here follows an investigation into the numPy.random library\n",
     "\n",
-    "After a brief introduction to **numpy**, we will zoom in to the **numpy.random** package to examine:\n",
-    "* where it came from\n",
-    "* who developed it\n",
-    "* what is it's purpose\n",
+    "After a brief introduction to **numPy**, explaining:\n",
+    "* what is numPy\n",
+    "* why is it so useful\n",
     "\n",
-    "We will then drill down into the package itself to look at some of the **functionality**, namely:\n",
+    "we will zoom in to the **numpy.random** package to examine some of the **functionality**, namely:\n",
     "* Simple Random Data\n",
     "* Permutations\n",
     "\n",
@@ -27,6 +26,53 @@
     "* Can Python really generate random numbers?\n",
     "* How to Python \"random\" numbers work?\n",
     "* Is there pattern to Python randomness?\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Section 1: Python numPy & numpy.random\n",
+    "\n",
+    "### What is numPy?\n",
+    "NumPy is an open-source library for Python, that is used for scientific computing and data analysis.[1] While the numPy library contains a number of facilities, including specialised mathematical functions and integration tools for C/C++/Fortran code [2], it's most attractive function is that it introduces a multi-dimensional array object, making it very easy to store, investigate and manipulate extremely large data sets [5].\n",
+    "\n",
+    "More detailed information on all of the above can be found at www.numpy.org.\n",
+    "This document will focus on more detail on one particular area of the numpy package, namely Random Sampling.\n",
+    "\n",
+    "### Simple Random Sampling\n",
+    "In a mathematical sense, before we can begin to analyse any dataset, we must be sure that it is valid data.\n",
+    "Statistically, this means ensuring that the dataset we are working on, accurately represents the larger group of people or things, that we want to make analytical statements or draw conclusions on.\n",
+    "\n",
+    "One of the cornerstones of any statistical analysis is the assumption that the data being analysed is random. Without going into too much detail on the mathematical concepts around this, we are trying to eliminate bias within our dataset and the best way to do this is by randomly selecting a sample of data from the population.\n",
+    "\n",
+    "A simple example might be if I want to use a small sample of shoppers to draw conclusions about the nations' favourite supermarket. If I stand outside a Tesco store and ask people as they enter the store, \"What is your favourite supermarket?\", the chances are high that they will answer \"Tesco\". This will skew my dataset towards one particular answer and therefore, my data is not randomly selected due to my method of generation.\n",
+    "\n",
+    "### numpy.random\n",
+    "The **numpy.random** package is concerned with the generation of various types of random data, for analysis. \n",
+    "\n",
+    "The package is broken down into four (4) distinct areas. We will now look into the detail of each of these areas, using some code snippets and visualisations to demonstrate.\n",
+    "\n",
+    "As with all python packages, we must import before we can use within our code:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy.random as np"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Simple Random Data\n",
+    "This is a set of ten (10) functions that are effectively shortcuts to generating data of certain types[2]. What this means will become clear as we progress through some of the functions and display the returned data.\n",
+    "\n",
+    "First we will investigate a number of the "
    ]
   },
   {
@@ -44,25 +90,28 @@
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## References:\n",
+    "**[1]:** *https://en.wikipedia.org/wiki/NumPy*\n",
+    "\n",
+    "**[2]** *www.numpy.org*\n",
+    "\n",
+    "**[3]:** *https://docs.scipy.org/doc/numpy-1.15.1/reference/arrays.ndarray.html*\n",
+    "\n",
+    "**[4]** *https://docs.scipy.org/doc/numpy-1.13.0/reference/routines.random.html*\n",
+    "\n",
+    "**[4]:** *Reference 3*\n",
+    "\n",
+    "**[5]:** *Reference 4*\n",
+    "\n",
+    "**[6]:** *Reference 5*\n",
+    "\n",
+    "**[7]:** *Reference 6*\n",
+    "\n",
+    "**[8]:** *Reference 7*"
+   ]
   },
   {
    "cell_type": "code",
