--- a/numpy-random.ipynb
+++ b/numpy-random.ipynb
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,7 +226,8 @@
     }
    ],
    "source": [
-    "# plot a histogram of a random selection of 1000 floats across the standard normal distribution (centred around zero with standard deviation of 1)\n",
+    "# plot a histogram of a random selection of 1000 floats across the standard normal distribution\n",
+    "# (centred around zero with standard deviation of 1)\n",
     "plt.hist(np.randn(1000))"
    ]
   },
@@ -259,38 +260,104 @@
     "- 2, 1, 3\n",
     "- 2, 3, 1\n",
     "- 3, 1, 2\n",
-    "- 3, 2, 1"
+    "- 3, 2, 1\n",
+    "\n",
+    "Each one of the above is a permutation of the elements {1, 2, 3}. There are 6 unique permutations of 3 elements. This is the most basic level of mathematical permutation and it can get quite complicated, so in the interest of simplicity, we will move on to look at the **numpy.random** functions relevant to this concept."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([7, 1, 0, 5, 8, 4, 2, 6, 3])"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy\n",
+    "arr = numpy.arange(9)\n",
+    "arr"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "this is a text part of my notebook\n",
-    "# Heading\n",
-    "Opening paragraph blah blah\n",
-    "## Smaller Heading\n",
-    "Opening music radio gaga\n",
+    "The **arange** function above returns a 1-d array of values, starting at 0, up to but not including 9, in steps of 1 each time.\n",
     "\n",
-    "### Smaller Heading\n",
-    "\n",
-    "*italics*\n",
-    "**bold**\n"
+    "printing the variable **arr** outputs the sequential 1-d array, as above.\n",
+    "When we take that array and shuffle it, we are returned a **random** permutation of **arr**, as shown"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([5, 0, 4, 2, 3, 6, 7, 8, 1])"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.permutation(arr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -317,7 +384,7 @@
     "\n",
     "**[3]:** *https://docs.scipy.org/doc/numpy-1.15.1/reference/arrays.ndarray.html*\n",
     "\n",
-    "**[4]:** *https://docs.scipy.org/doc/numpy-1.13.0/reference/routines.random.html*\n",
+    "**[4]:** *https://docs.scipy.org/doc/numpy-1.15.1/reference/routines.random.html*\n",
     "\n",
     "**[5]:** *https://www.labri.fr/perso/nrougier/teaching/numpy/numpy.html#introduction*\n",
     "\n",
